--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Test Page</h1>
     <h2>New Heading</h2>
+    <h3>This is the update for testing the new branch</h3>
   </body>
 </html>
